Fix contact alignment and color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -636,11 +636,11 @@ a:visited {
   position: absolute;
   content: "";
   top: 0;
-  left: 0;
+  left: 50%;
   background-color: var(--bg-dark-clr);
   width: 192rem;
   height: 32rem;
-  transform: translate(-21%, -75%);
+  transform: translate(-50%, -75%);
   border-radius: 50%;
 }
 
